# s3-minio-starter

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/sample_iam_policies/: github_oidc_trust_policy.json  s3_least_privilege.json
src/: __init__.py  cli.py  config.py  dataset.py  hashing.py  logging_utils.py  storage_client.py  validate.py
tests/: test_ingest_idempotent.py  test_storage_client_moto.py
