[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-minio-starter"
version = "0.1.0"
description = "Lean S3/MinIO data pipeline with atomic/idempotent writes and presigned URLs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "boto3>=1.34",
  "botocore>=1.34",
  "click>=8.1",
  "python-dateutil>=2.9",
  "tqdm>=4.66",
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "moto[s3]>=5.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]